# Hack-A-Cause_Sliding_Window

./: .gitignore  PRD.md  README.md  code.html  test_ml.py
ML/: .gitignore  audit_output.txt  audit_result.txt  audit_simple.py  dataset_audit.py  eda_analysis.py  export_bundle.py  export_log.txt  generate_synthetic_data.py  overfitting_audit.py  preprocess.py  preprocess_log.txt  train.py  train_log.txt  train_log2.txt
ML/datasets/: actual_rainfall_2025.csv  groundwater_data.csv  villages.csv  water_source_data.csv
ML/models/: best_model.keras  drought_lstm.keras  evaluation.json  evaluation_v2.json  inference_bundle.pkl  overfitting_audit.json  training_history.json  training_history_v2.json  training_log.csv
ML/processed/: X_test.npy  X_val.npy  dataset_stats.json  feature_names.txt  scaler.pkl  y_test.npy  y_train.npy  y_val.npy
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  supabase_schema.sql  supabase_seed.sql
backend/app/: db.py  schemas.py
backend/app/cron/: daily_predict.py  scheduler.py
backend/app/ml/: generate_data.py  predictor.py  train_model.py
backend/app/routes/: districts.py  health.py  predictions.py  routing.py  sms.py  tankers.py  users.py
backend/app/services/: maps_service.py
backend/tests/: test_api.py
frontend/: README.md  middleware.ts  next-env.d.ts  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: DistrictMap.tsx  (+3 more)
ml_service/: health_test.txt  main.py  predictor.py  requirements.txt  schemas.py  test_api.py  test_output.txt
(+82 files in other folders)
